<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/list_item_top_margin"
    android:layout_marginBottom="@dimen/list_item_bottom_margin"
    android:clickable="false"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/drawable_list_item_clicked"
        android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingRight="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="18dp"
                        android:text="browser tv"
                        android:layout_marginLeft="4dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="end|center"
                        android:gravity="right"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv5"
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/location_iv"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/list_item_black"
                            android:gravity="center|right"
                            android:textSize="12dp"
                            android:text="address tv"/>

                        <ImageView
                            android:id="@+id/location_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location"
                            android:tint="@color/icon_colored"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:id="@+id/tv2_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="12dp"
                        android:text="@string/platform"/>

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="14dp"
                        android:text="empty"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:id="@+id/tv3_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="12dp"
                        android:text="@string/labels"/>

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="14dp"
                        android:text="empty"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="4dp">

                    <TextView
                        android:id="@+id/tv4_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="12dp"
                        android:text="@string/performance"/>

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center|left"
                        android:textSize="14dp"
                        android:text="empty"/>

                </LinearLayout>

                <com.softtech.android.displaydata.custom_views.RatingView
                    android:id="@+id/rating_view"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>